# -3kli6t

./: .gitignore  .gitignore.txt  README.md  build.bat  gitignore.txt
projects/: CMakeLists.txt  prime.cpp
projects/Biginteger/: CMakeLists.txt  main.cpp
projects/Biginteger/got/: CMakeLists.txt  LongNumber.cpp  LongNumber.h
projects/Biginteger/test/: CMakeLists.txt  LongNumberTests.cpp
projects/Diff_enviroments/: CMakeLists.txt  c.cpp  c.h  main.cpp  run_Diff_enviroments.bat  t.cpp  t.h
projects/Dynamic/: CMakeLists.txt  main.cpp  templates.cpp  vector.h
projects/Fibonacci_numbers/: CMakeLists.txt  main.cpp  run_Fibonacci_numbers.bat
projects/OOP_console/: CMakeLists.txt  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp  run_OOP_console.bat
projects/Sorting/: CMakeLists.txt  main.cpp  run_Sorting.bat
projects/deque/: list_deque.h  static_array_deque.h  vector_deque.h
projects/static_array/: CMakeLists.txt
projects/tests/: CMakeLists.txt
projects/tests/src/: CMakeLists.txt  radix_sort.cpp  radix_sort.h
projects/tests/src/deque/: CMakeLists.txt
projects/tests/src/list/: CMakeLists.txt  double_linked_list.cpp  double_linked_list.h  doubly_linked_list.cpp  doubly_linked_list.h
projects/tests/src/static_array/: static_array.cpp  static_array.h
projects/tests/src/vector/: CMakeLists.txt  main.cpp  templates.cpp  vector.cpp  vector.h
projects/tests/test/: CMakeLists.txt  test_radix.cpp
projects/tests/test/double_link_list/: CMakeLists.txt  templates.cpp  test_doubly_linked_list.cpp
(+11 files in other folders)
